--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -4,28 +4,37 @@
 
 /* import fonts from fonts woff folder */
 @font-face {
-    font-family: 'bein-black';
+    font-family: "bein-black";
     font-style: black;
     font-weight: 900;
-    src: url('../fonts/woff/bein-black.woff') format('woff');
+    src: url("../fonts/woff/bein-black.woff") format("woff");
 }
 
 @font-face {
-    font-family: 'bein-normal';
+    font-family: "bein-normal";
     font-style: normal;
     font-weight: 400;
-    src: url('../fonts/woff/bein-normal.woff') format('woff');
+    src: url("../fonts/woff/bein-normal.woff") format("woff");
 }
 @font-face {
-    font-family: 'droid-arabic-kufi';
+    font-family: "droid-arabic-kufi";
     font-style: normal;
     font-weight: 400;
-    src: url('../fonts/woff/droid-arabic-kufi.woff') format('woff');
+    src: url("../fonts/woff/droid-arabic-kufi.woff") format("woff");
 }
-
-
 
 body {
-    background-color: #0129c7;
-    font-family: 'droid-arabic-kufi', sans-serif !important;
+    font-family: "droid-arabic-kufi", sans-serif !important;
+}
+
+@layer components {
+    .header-nav-btn {
+        @apply relative overflow-hidden after:content-[''] after:h-2 after:absolute after:left-0 after:translate-y-2 after:bottom-0 after:w-full after:bg-yellow-500 hover:after:translate-y-0 transition-transform after:duration-300;
+    }
+    .header-nav-btn-active {
+        @apply after:translate-y-0;
+    }
+    .hero-header{
+        height: 600px;
+    }
 }
