--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -47,4 +47,7 @@ body {
     .page-header {
         @apply relative after:content-[''] after:h-full after:absolute after:left-0 after:bottom-0 after:w-full after:bg-gradient-to-t after:bg-midnight after:opacity-45 z-0;
     }
+    .checked.room{
+        @apply bg-black-1000 text-white;
+    }
 }
