Push for deploy

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -42,7 +42,7 @@ body {
     }
     .hero-header {
         @apply relative after:content-[''] after:h-full after:absolute after:left-0 after:bottom-0 after:w-full after:bg-gradient-to-t after:bg-midnight after:opacity-60 z-0;
-        height: 450px;
+        /* height: 550px; */
     }
     .page-header {
         @apply relative after:content-[''] after:h-full after:absolute after:left-0 after:bottom-0 after:w-full after:bg-gradient-to-t after:bg-midnight after:opacity-45 z-0;
