working on text editor

--- a/resources/css/app.scss
+++ b/resources/css/app.scss
@@ -1,6 +1,9 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+@import 'quill/dist/quill.core.css';
+@import 'quill/dist/quill.snow.css';
+
 
 [x-cloak] {
     display: none;
