Fix offer modal

--- a/resources/css/app.scss
+++ b/resources/css/app.scss
@@ -128,6 +128,18 @@ body {
         animation-direction: normal;
         animation-range: 0% 50%;
     }
+
+    .modal{
+        .description *{
+            max-width: 100% !important;
+        }
+    }
+
+    .dashboard{
+        .breadcrumbs * {
+            color: inherit !important;
+        }
+    }
 }
 
 
