--- a/resources/css/app.scss
+++ b/resources/css/app.scss
@@ -58,6 +58,9 @@ body {
     .container {
         @apply px-3 md:px-0;
     }
+    .overley {
+        @apply relative before:content-[''] before:h-full before:absolute before:left-0 before:bottom-0 before:w-full before:bg-gradient-to-t before:bg-midnight before:opacity-45 before:z-10;
+    }
     .page-header {
         @apply relative after:content-[''] after:h-full after:absolute after:left-0 after:bottom-0 after:w-full after:bg-gradient-to-t after:bg-midnight after:opacity-45 z-0;
     }
