show blog post & comments

--- a/resources/css/app.scss
+++ b/resources/css/app.scss
@@ -9,6 +9,10 @@
     display: none;
 }
 
+svg{
+    @apply fill-blue-950;
+}
+
 /* import fonts from fonts woff folder */
 @font-face {
     font-family: "bein-black";
