--- a/resources/css/app.scss
+++ b/resources/css/app.scss
@@ -99,6 +99,15 @@ body {
         background-size: 60% auto;
         background-repeat: no-repeat;
     }
+    .publish{
+        width: 1.5rem;
+        height: 1.5rem;
+        background-color: white !important;
+        background-image: url('../images/publish.png');
+        background-position: center;
+        background-size: 60% auto;
+        background-repeat: no-repeat;
+    }
     input:focus{
         box-shadow: none;
     }
